welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: value porteBicuit
while(!estFaceMur() && !estSurBiscuit() && !porteBicuit()){
                                            ^