welcome.lessons.welcome.summative.Moria.scala.code
retourne()
while(!estFaceMur() && !estSurBiscuit() && !porteBicuit()){
  if(!porteBiscuit()){
    if(!estSurBiscuit()){avance()}
    else{prendBiscuit();retourne()}
  }
  else{
    if(!estSurBiscuit()){avance()}
    else{recule();poseBiscuit();retourne}
  }
}